add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1259,4 +1259,7 @@
   margin-bottom: 14px;
   padding-left: 99px;
   border-left-width: 94px;
+  border-right-width: 48px;
+  padding-bottom: 51px;
+  margin-top: 75px;
 }
