--- a/content.scss
+++ b/content.scss
@@ -1263,4 +1263,7 @@
   padding-bottom: 51px;
   margin-top: 75px;
   margin-left: 20px;
+  padding-top: 51px;
+  line-height: 18px;
+  padding-left: 83px;
 }
