add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1260,4 +1260,6 @@
   padding-left: 99px;
   border-left-width: 94px;
   border-right-width: 48px;
+  border-right-width: 99px;
+  border-right-width: 66px;
 }
