--- a/content.scss
+++ b/content.scss
@@ -1261,5 +1261,5 @@
   border-left-width: 94px;
   border-right-width: 48px;
   border-right-width: 99px;
-  border-top-width: 41px;
+  padding-bottom: 11px;
 }
