add code in files types: .hbs,.scss,.js remove code in files types: .hbs,.scss,.js

--- a/content.scss
+++ b/content.scss
@@ -1261,5 +1261,5 @@
   border-left-width: 94px;
   border-right-width: 48px;
   border-right-width: 99px;
-  padding-bottom: 3px;
+  border-left-width: 23px;
 }
