add code in files types: .sh,.painless,.java remove code in files types: .sh,.java

--- a/content.css
+++ b/content.css
@@ -1197,5 +1197,8 @@
   border-left-width: 79px;
   padding-top: 60px;
   border-right-width: 2px;
-  font-size: 49px;
+  margin-top: 26px;
+  border-left-width: 26px;
+  margin-top: 22px;
+  margin-top: 5px;
 }
