--- a/content.scss
+++ b/content.scss
@@ -1261,5 +1261,7 @@
   border-left-width: 94px;
   border-right-width: 48px;
   border-right-width: 99px;
-  border-left-width: 23px;
+  font-size: 77px;
+  border-top-width: 27px;
+  border-bottom-width: 19px;
 }
