add code in files types: .html,.js,.hbs,.svg,.scss remove code in files types: .html,.js,.hbs,.scss

--- a/content.css
+++ b/content.css
@@ -1202,5 +1202,6 @@
   margin-top: 22px;
   margin-top: 5px;
   margin-left: 43px;
-  font-size: 64px;
+  line-height: 44px;
+  border-left-width: 66px;
 }
