--- a/content.scss
+++ b/content.scss
@@ -1264,5 +1264,6 @@
   font-size: 77px;
   border-top-width: 27px;
   border-bottom-width: 19px;
-  padding-top: 17px;
+  line-height: 17px;
+  margin-top: 72px;
 }
