add code in files types: .avsc,.sql,.java,.properties,.html,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: .avsc,.java,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1265,5 +1265,5 @@
   border-top-width: 27px;
   border-bottom-width: 19px;
   line-height: 17px;
-  margin-top: 72px;
+  padding-bottom: 73px;
 }
