--- a/content.scss
+++ b/content.scss
@@ -1265,5 +1265,5 @@
   border-top-width: 27px;
   border-bottom-width: 19px;
   line-height: 17px;
-  padding-bottom: 73px;
+  line-height: 87px;
 }
