--- a/content.scss
+++ b/content.scss
@@ -1265,5 +1265,5 @@
   border-top-width: 27px;
   border-bottom-width: 19px;
   line-height: 17px;
-  border-left-width: 56px;
+  margin-right: 45px;
 }
