add code in files types: .hbs,.js,.scss remove code in files types: .hbs,.js,.scss

--- a/content.scss
+++ b/content.scss
@@ -1267,5 +1267,7 @@
   line-height: 17px;
   margin-right: 45px;
   border-left-width: 11px;
-  border-top-width: 13px;
+  border-top-width: 59px;
+  margin-top: 59px;
+  font-size: 76px;
 }
