add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1269,5 +1269,6 @@
   border-left-width: 11px;
   border-top-width: 59px;
   margin-top: 59px;
-  font-size: 76px;
+  padding-top: 10px;
+  margin-right: 67px;
 }
