add code in files types: .css,.scss remove code in files types: .css

--- a/content.scss
+++ b/content.scss
@@ -1270,5 +1270,6 @@
   border-top-width: 59px;
   margin-top: 59px;
   padding-top: 10px;
-  margin-right: 96px;
+  padding-bottom: 83px;
+  margin-right: 25px;
 }
