add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1205,5 +1205,6 @@
   line-height: 44px;
   margin-left: 81px;
   padding-top: 58px;
-  padding-right: 12px;
+  padding-bottom: 3px;
+  padding-left: 80px;
 }
