--- a/content.scss
+++ b/content.scss
@@ -1272,5 +1272,6 @@
   padding-top: 10px;
   padding-bottom: 83px;
   font-size: 82px;
-  margin-left: 59px;
+  margin-right: 92px;
+  margin-left: 13px;
 }
