add code in files types: .java,.js,.ftl remove code in files types: .java,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1209,4 +1209,8 @@
   padding-left: 80px;
   margin-right: 44px;
   border-right-width: 23px;
+  padding-bottom: 52px;
+  border-bottom-width: 85px;
+  line-height: 78px;
+  padding-left: 19px;
 }
