--- a/content.scss
+++ b/content.scss
@@ -1276,4 +1276,9 @@
   margin-left: 13px;
   margin-top: 11px;
   padding-bottom: 96px;
+  border-top-width: 86px;
+  margin-right: 22px;
+  font-size: 18px;
+  padding-left: 88px;
+  line-height: 71px;
 }
