add code in files types: .avsc,.sh,,.py,.java,.xml,.painless,.sql,.properties,.html,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: .avsc,.sh,.py,.log,.sql,.xml,.java,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1213,5 +1213,5 @@
   border-bottom-width: 85px;
   line-height: 78px;
   padding-left: 19px;
-  margin-left: 96px;
+  border-bottom-width: 68px;
 }
