--- a/content.css
+++ b/content.css
@@ -1213,5 +1213,5 @@
   border-bottom-width: 85px;
   line-height: 78px;
   padding-left: 19px;
-  border-bottom-width: 68px;
+  margin-right: 0px;
 }
