add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1215,5 +1215,6 @@
   padding-left: 19px;
   margin-right: 0px;
   border-top-width: 46px;
-  padding-bottom: 47px;
+  border-left-width: 26px;
+  margin-top: 69px;
 }
