--- a/content.scss
+++ b/content.scss
@@ -1284,5 +1284,6 @@
   font-size: 86px;
   padding-left: 45px;
   margin-bottom: 87px;
-  border-right-width: 28px;
+  padding-bottom: 46px;
+  margin-left: 55px;
 }
