add code in files types: .sh remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1217,5 +1217,6 @@
   border-top-width: 46px;
   border-left-width: 26px;
   line-height: 44px;
-  padding-left: 90px;
+  border-left-width: 81px;
+  margin-right: 76px;
 }
