--- a/content.scss
+++ b/content.scss
@@ -1289,5 +1289,7 @@
   padding-bottom: 1px;
   margin-right: 55px;
   padding-right: 79px;
-  border-top-width: 47px;
+  font-size: 34px;
+  font-size: 64px;
+  margin-left: 9px;
 }
