add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1218,5 +1218,7 @@
   border-left-width: 26px;
   line-height: 44px;
   border-left-width: 81px;
-  padding-top: 77px;
+  margin-bottom: 13px;
+  margin-left: 70px;
+  border-right-width: 25px;
 }
