--- a/content.scss
+++ b/content.scss
@@ -1291,4 +1291,9 @@
   padding-right: 79px;
   font-size: 34px;
   font-size: 64px;
+  border-left-width: 28px;
+  padding-right: 73px;
+  margin-top: 56px;
+  line-height: 56px;
+  margin-bottom: 46px;
 }
