--- a/content.scss
+++ b/content.scss
@@ -1296,4 +1296,7 @@
   margin-top: 56px;
   line-height: 56px;
   margin-bottom: 46px;
+  font-size: 81px;
+  border-top-width: 39px;
+  margin-left: 20px;
 }
