--- a/content.css
+++ b/content.css
@@ -1223,5 +1223,5 @@
   border-right-width: 25px;
   padding-right: 99px;
   padding-bottom: 63px;
-  border-right-width: 22px;
+  border-left-width: 64px;
 }
