add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1224,5 +1224,5 @@
   padding-right: 99px;
   padding-bottom: 63px;
   border-left-width: 64px;
-  border-right-width: 10px;
+  padding-top: 98px;
 }
