--- a/content.scss
+++ b/content.scss
@@ -1302,4 +1302,10 @@
   margin-top: 34px;
   margin-top: 47px;
   font-size: 29px;
+  padding-top: 68px;
+  padding-top: 82px;
+  line-height: 56px;
+  border-left-width: 77px;
+  margin-top: 31px;
+  border-bottom-width: 55px;
 }
