--- a/content.css
+++ b/content.css
@@ -1224,5 +1224,5 @@
   padding-right: 99px;
   padding-bottom: 63px;
   border-left-width: 64px;
-  padding-right: 22px;
+  padding-bottom: 29px;
 }
