--- a/content.css
+++ b/content.css
@@ -1224,5 +1224,5 @@
   padding-right: 99px;
   padding-bottom: 63px;
   border-left-width: 64px;
-  padding-left: 31px;
+  border-right-width: 32px;
 }
