add code in files types: .java,.js,.ftl remove code in files types: .java,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1224,5 +1224,6 @@
   padding-right: 99px;
   padding-bottom: 63px;
   border-left-width: 64px;
-  border-right-width: 32px;
+  padding-left: 23px;
+  padding-right: 31px;
 }
