--- a/content.scss
+++ b/content.scss
@@ -1311,5 +1311,14 @@
   margin-top: 83px;
   line-height: 87px;
   line-height: 74px;
-  padding-left: 30px;
+  line-height: 40px;
+  border-left-width: 55px;
+  border-bottom-width: 21px;
+  border-top-width: 75px;
+  border-left-width: 50px;
+  border-left-width: 10px;
+  margin-left: 24px;
+  padding-right: 84px;
+  margin-top: 0px;
+  margin-bottom: 33px;
 }
