add code in files types: .java,.sql,.xml,.js,.hbs,.scss,.css,.ftl remove code in files types: .java,.sql,.xml,.js,.hbs,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1225,5 +1225,5 @@
   padding-bottom: 63px;
   border-left-width: 64px;
   padding-left: 23px;
-  line-height: 99px;
+  border-bottom-width: 16px;
 }
