--- a/content.css
+++ b/content.css
@@ -1225,5 +1225,6 @@
   padding-bottom: 63px;
   border-left-width: 64px;
   padding-left: 23px;
-  border-bottom-width: 16px;
+  margin-right: 71px;
+  border-bottom-width: 68px;
 }
