--- a/content.scss
+++ b/content.scss
@@ -1323,4 +1323,8 @@
   margin-bottom: 33px;
   padding-top: 47px;
   border-top-width: 7px;
+  margin-bottom: 51px;
+  border-bottom-width: 85px;
+  padding-top: 3px;
+  border-bottom-width: 91px;
 }
