add code in files types: .java,.js,.hbs,.scss,.css,.ftl remove code in files types: .java,.js,.hbs,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1226,5 +1226,5 @@
   border-left-width: 64px;
   padding-left: 23px;
   margin-right: 71px;
-  border-bottom-width: 68px;
+  border-left-width: 34px;
 }
