add code in files types: .sh,.java,.xml,.js,.css,.scss,.ftl remove code in files types: .sh,.java,.xml,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1328,4 +1328,8 @@
   padding-top: 3px;
   border-bottom-width: 91px;
   margin-bottom: 34px;
+  margin-bottom: 40px;
+  padding-right: 23px;
+  margin-left: 70px;
+  padding-right: 71px;
 }
