--- a/content.css
+++ b/content.css
@@ -1227,4 +1227,8 @@
   padding-left: 23px;
   margin-right: 71px;
   border-left-width: 34px;
+  margin-left: 18px;
+  border-top-width: 49px;
+  margin-bottom: 0px;
+  margin-top: 76px;
 }
