add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1230,5 +1230,6 @@
   margin-left: 18px;
   border-top-width: 49px;
   margin-bottom: 0px;
-  margin-top: 76px;
+  border-right-width: 64px;
+  border-right-width: 51px;
 }
