--- a/content.scss
+++ b/content.scss
@@ -1331,5 +1331,6 @@
   margin-bottom: 40px;
   padding-right: 23px;
   margin-left: 70px;
-  padding-right: 71px;
+  padding-left: 57px;
+  border-right-width: 43px;
 }
