add code in files types: ,.conf,.sh,.sql,.java,.xml,.hbs,.js,.css,.scss,.ftl remove code in files types: ,.conf,.sh,.java,.xml,.hbs,.js,.css,.scss,.ftl

--- a/content.css
+++ b/content.css
@@ -1231,5 +1231,5 @@
   border-top-width: 49px;
   margin-bottom: 0px;
   border-right-width: 64px;
-  border-right-width: 51px;
+  padding-top: 12px;
 }
