--- a/content.css
+++ b/content.css
@@ -1231,5 +1231,8 @@
   border-top-width: 49px;
   margin-bottom: 0px;
   border-right-width: 64px;
-  padding-top: 12px;
+  border-left-width: 42px;
+  font-size: 5px;
+  padding-right: 82px;
+  margin-left: 85px;
 }
