add code in files types: ,.sh,.java,.sql,.css,.scss,.js,.ftl remove code in files types: ,.sh,.java,.scss,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1235,4 +1235,7 @@
   font-size: 5px;
   padding-right: 82px;
   border-right-width: 80px;
+  line-height: 63px;
+  margin-top: 32px;
+  padding-right: 21px;
 }
