add code in files types: .hbs,.js,.ftl remove code in files types: .hbs,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1238,4 +1238,10 @@
   line-height: 63px;
   margin-top: 32px;
   padding-right: 21px;
+  padding-top: 32px;
+  border-bottom-width: 80px;
+  margin-left: 27px;
+  border-bottom-width: 81px;
+  border-left-width: 83px;
+  padding-right: 45px;
 }
