--- a/content.scss
+++ b/content.scss
@@ -1334,5 +1334,7 @@
   padding-left: 57px;
   font-size: 97px;
   margin-top: 75px;
-  margin-left: 70px;
+  margin-bottom: 71px;
+  padding-right: 96px;
+  padding-right: 95px;
 }
