add code in files types: .css,.scss,.js,.ftl remove code in files types: .scss,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1243,5 +1243,15 @@
   margin-left: 27px;
   border-bottom-width: 81px;
   border-left-width: 83px;
-  padding-right: 45px;
+  margin-right: 63px;
+  margin-left: 35px;
+  border-top-width: 0px;
+  line-height: 88px;
+  line-height: 22px;
+  padding-top: 52px;
+  padding-bottom: 88px;
+  margin-top: 79px;
+  margin-top: 40px;
+  margin-right: 7px;
+  border-left-width: 70px;
 }
