--- a/content.scss
+++ b/content.scss
@@ -1336,5 +1336,11 @@
   margin-top: 75px;
   margin-bottom: 71px;
   padding-right: 96px;
-  padding-right: 95px;
+  border-bottom-width: 98px;
+  border-bottom-width: 47px;
+  margin-bottom: 6px;
+  margin-left: 60px;
+  padding-right: 30px;
+  font-size: 42px;
+  margin-top: 29px;
 }
