--- a/content.css
+++ b/content.css
@@ -1254,5 +1254,6 @@
   margin-top: 40px;
   margin-right: 7px;
   border-left-width: 35px;
-  padding-left: 65px;
+  border-bottom-width: 33px;
+  padding-right: 12px;
 }
