--- a/content.css
+++ b/content.css
@@ -1255,5 +1255,5 @@
   margin-right: 7px;
   border-left-width: 35px;
   border-bottom-width: 33px;
-  padding-right: 12px;
+  padding-top: 20px;
 }
