add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1256,4 +1256,6 @@
   border-left-width: 35px;
   border-bottom-width: 33px;
   padding-top: 20px;
+  padding-right: 32px;
+  margin-bottom: 49px;
 }
