add code in files types: .sql,.java,.scss,.js,.ftl remove code in files types: .java,.scss,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1349,5 +1349,5 @@
   padding-right: 16px;
   padding-bottom: 61px;
   line-height: 75px;
-  border-bottom-width: 86px;
+  padding-bottom: 76px;
 }
