add code in files types: .ftl remove code in files types: .ftl

--- a/content.scss
+++ b/content.scss
@@ -1349,5 +1349,6 @@
   padding-right: 16px;
   padding-bottom: 61px;
   line-height: 75px;
-  border-right-width: 88px;
+  padding-right: 89px;
+  margin-top: 49px;
 }
