add code in files types: .sh,.sql,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: .java,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1262,5 +1262,5 @@
   margin-bottom: 20px;
   border-right-width: 86px;
   border-right-width: 26px;
-  border-bottom-width: 76px;
+  border-left-width: 26px;
 }
