--- a/content.css
+++ b/content.css
@@ -1262,5 +1262,5 @@
   margin-bottom: 20px;
   border-right-width: 86px;
   border-right-width: 26px;
-  margin-top: 60px;
+  margin-right: 95px;
 }
