--- a/content.css
+++ b/content.css
@@ -1262,5 +1262,5 @@
   margin-bottom: 20px;
   border-right-width: 86px;
   border-right-width: 26px;
-  padding-right: 73px;
+  line-height: 44px;
 }
