add code in files types: .sql,.java,.js remove code in files types: .sql,.java,.js

--- a/content.css
+++ b/content.css
@@ -1262,5 +1262,5 @@
   margin-bottom: 20px;
   border-right-width: 86px;
   border-right-width: 26px;
-  line-height: 44px;
+  margin-left: 47px;
 }
