add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1262,5 +1262,6 @@
   margin-bottom: 20px;
   border-right-width: 86px;
   border-right-width: 26px;
-  margin-left: 47px;
+  margin-top: 16px;
+  margin-right: 2px;
 }
