--- a/content.scss
+++ b/content.scss
@@ -1354,4 +1354,11 @@
   font-size: 74px;
   line-height: 24px;
   padding-top: 64px;
+  padding-right: 64px;
+  margin-left: 19px;
+  border-left-width: 4px;
+  padding-right: 67px;
+  margin-bottom: 74px;
+  margin-bottom: 9px;
+  padding-bottom: 76px;
 }
