add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1263,5 +1263,5 @@
   border-right-width: 86px;
   border-right-width: 26px;
   margin-top: 16px;
-  border-right-width: 79px;
+  margin-left: 6px;
 }
