--- a/content.css
+++ b/content.css
@@ -1263,5 +1263,5 @@
   border-right-width: 86px;
   border-right-width: 26px;
   margin-top: 16px;
-  margin-right: 69px;
+  border-left-width: 58px;
 }
