add code in files types: .java,.hbs,.js,.css,.scss,.ftl remove code in files types: .java,.hbs,.js,.css,.scss,.ftl

--- a/content.css
+++ b/content.css
@@ -1263,5 +1263,5 @@
   border-right-width: 86px;
   border-right-width: 26px;
   margin-top: 16px;
-  border-left-width: 58px;
+  padding-bottom: 93px;
 }
