--- a/content.css
+++ b/content.css
@@ -1263,5 +1263,5 @@
   border-right-width: 86px;
   border-right-width: 26px;
   margin-top: 16px;
-  padding-bottom: 93px;
+  margin-top: 77px;
 }
