add code in files types: ,.avsc,.py,.conf,.sh,.groovy,.xml,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.sh,.py,.conf,.groovy,.xml,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1366,5 +1366,5 @@
   margin-bottom: 74px;
   padding-bottom: 95px;
   border-right-width: 25px;
-  line-height: 19px;
+  border-right-width: 48px;
 }
