--- a/content.css
+++ b/content.css
@@ -1260,5 +1260,5 @@
   margin-bottom: 49px;
   margin-top: 12px;
   margin-bottom: 20px;
-  border-right-width: 86px;
+  border-top-width: 53px;
 }
