add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1259,6 +1259,5 @@
   padding-right: 32px;
   margin-bottom: 49px;
   margin-top: 12px;
-  margin-bottom: 20px;
-  border-top-width: 53px;
+  border-right-width: 13px;
 }
