add code in files types: .java,.css,.scss,.js,.ftl remove code in files types: .java,.css,.scss,.js

--- a/content.scss
+++ b/content.scss
@@ -1367,5 +1367,5 @@
   padding-bottom: 95px;
   border-right-width: 25px;
   border-right-width: 48px;
-  border-right-width: 59px;
+  padding-left: 44px;
 }
