--- a/content.scss
+++ b/content.scss
@@ -1367,5 +1367,5 @@
   padding-bottom: 95px;
   border-right-width: 25px;
   border-right-width: 48px;
-  padding-left: 44px;
+  font-size: 74px;
 }
