add code in files types: ,.sh,.java,.sql,.hbs,.js,.svg,.scss,.css,.ftl,.xml remove code in files types: ,.sh,.java,.hbs,.js,.scss,.css,.ftl,.xml

--- a/content.css
+++ b/content.css
@@ -1257,7 +1257,5 @@
   border-bottom-width: 33px;
   padding-top: 20px;
   padding-right: 32px;
-  margin-bottom: 49px;
-  margin-top: 12px;
-  margin-top: 49px;
+  padding-left: 88px;
 }
