--- a/content.scss
+++ b/content.scss
@@ -1367,5 +1367,5 @@
   padding-bottom: 95px;
   border-right-width: 25px;
   border-right-width: 48px;
-  margin-top: 70px;
+  border-right-width: 81px;
 }
