add code in files types: .sql remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1367,5 +1367,6 @@
   padding-bottom: 95px;
   border-right-width: 25px;
   border-right-width: 48px;
-  line-height: 39px;
+  border-bottom-width: 6px;
+  margin-right: 91px;
 }
