--- a/content.css
+++ b/content.css
@@ -1255,5 +1255,6 @@
   margin-right: 7px;
   border-left-width: 35px;
   border-bottom-width: 33px;
-  margin-top: 61px;
+  padding-left: 61px;
+  font-size: 7px;
 }
