add code in files types: ,.sh,.py,.java,.sql,.properties,.xml,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: ,.sh,.py,.java,.sql,.properties,.xml,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1256,5 +1256,5 @@
   border-left-width: 35px;
   border-bottom-width: 33px;
   padding-left: 61px;
-  font-size: 7px;
+  border-top-width: 45px;
 }
