--- a/content.scss
+++ b/content.scss
@@ -1368,5 +1368,5 @@
   border-right-width: 25px;
   border-right-width: 48px;
   border-bottom-width: 6px;
-  margin-right: 91px;
+  font-size: 5px;
 }
