add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1256,5 +1256,6 @@
   border-left-width: 35px;
   border-bottom-width: 33px;
   padding-left: 61px;
-  border-top-width: 45px;
+  border-bottom-width: 79px;
+  margin-top: 44px;
 }
