--- a/content.scss
+++ b/content.scss
@@ -1368,5 +1368,6 @@
   border-right-width: 25px;
   border-right-width: 48px;
   border-bottom-width: 6px;
-  font-size: 5px;
+  margin-right: 56px;
+  margin-top: 91px;
 }
