--- a/content.css
+++ b/content.css
@@ -1260,5 +1260,8 @@
   margin-top: 44px;
   border-left-width: 40px;
   border-top-width: 6px;
-  padding-bottom: 13px;
+  padding-left: 9px;
+  padding-bottom: 80px;
+  margin-top: 14px;
+  border-right-width: 99px;
 }
