--- a/content.scss
+++ b/content.scss
@@ -1372,5 +1372,8 @@
   margin-top: 91px;
   line-height: 4px;
   line-height: 34px;
-  padding-top: 55px;
+  margin-left: 93px;
+  border-left-width: 35px;
+  margin-top: 95px;
+  padding-right: 54px;
 }
