add code in files types: .js,.css,.scss,.ftl remove code in files types: .js,.css,.scss,.ftl

--- a/content.css
+++ b/content.css
@@ -1264,5 +1264,5 @@
   padding-bottom: 80px;
   margin-top: 14px;
   border-right-width: 99px;
-  padding-bottom: 93px;
+  border-left-width: 40px;
 }
