add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1376,5 +1376,6 @@
   border-left-width: 35px;
   margin-top: 95px;
   padding-right: 54px;
-  border-left-width: 86px;
+  padding-right: 93px;
+  line-height: 39px;
 }
