--- a/content.css
+++ b/content.css
@@ -1264,5 +1264,5 @@
   padding-bottom: 80px;
   margin-top: 14px;
   border-right-width: 99px;
-  border-left-width: 40px;
+  margin-bottom: 8px;
 }
