add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1264,5 +1264,5 @@
   padding-bottom: 80px;
   margin-top: 14px;
   border-right-width: 99px;
-  padding-right: 5px;
+  border-left-width: 87px;
 }
