--- a/content.scss
+++ b/content.scss
@@ -1377,5 +1377,6 @@
   margin-top: 95px;
   padding-right: 54px;
   padding-right: 93px;
-  font-size: 55px;
+  margin-right: 16px;
+  font-size: 53px;
 }
