add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1263,6 +1263,7 @@
   padding-left: 9px;
   padding-bottom: 80px;
   margin-top: 14px;
-  border-right-width: 99px;
-  border-left-width: 87px;
+  padding-bottom: 17px;
+  line-height: 25px;
+  margin-left: 95px;
 }
