--- a/content.scss
+++ b/content.scss
@@ -1379,4 +1379,7 @@
   padding-right: 93px;
   margin-right: 16px;
   font-size: 53px;
+  padding-top: 9px;
+  border-top-width: 36px;
+  padding-top: 31px;
 }
