add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1267,5 +1267,9 @@
   line-height: 25px;
   margin-left: 95px;
   line-height: 17px;
-  border-bottom-width: 90px;
+  line-height: 43px;
+  padding-bottom: 23px;
+  border-right-width: 66px;
+  margin-top: 5px;
+  padding-top: 65px;
 }
