--- a/content.scss
+++ b/content.scss
@@ -1383,5 +1383,9 @@
   border-top-width: 36px;
   padding-top: 31px;
   border-top-width: 77px;
-  margin-right: 38px;
+  padding-right: 13px;
+  margin-left: 27px;
+  border-top-width: 46px;
+  border-top-width: 97px;
+  padding-top: 7px;
 }
