add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1272,5 +1272,6 @@
   border-right-width: 66px;
   margin-top: 5px;
   padding-top: 65px;
-  font-size: 39px;
+  padding-right: 50px;
+  margin-left: 58px;
 }
