--- a/content.scss
+++ b/content.scss
@@ -1389,5 +1389,6 @@
   border-top-width: 97px;
   padding-top: 7px;
   padding-left: 61px;
-  border-top-width: 66px;
+  padding-bottom: 90px;
+  margin-right: 66px;
 }
