--- a/content.scss
+++ b/content.scss
@@ -1390,5 +1390,6 @@
   padding-top: 7px;
   padding-left: 61px;
   padding-bottom: 90px;
-  padding-left: 24px;
+  border-right-width: 50px;
+  padding-top: 25px;
 }
