--- a/content.css
+++ b/content.css
@@ -1274,5 +1274,5 @@
   padding-top: 65px;
   padding-right: 50px;
   border-bottom-width: 6px;
-  padding-bottom: 21px;
+  border-left-width: 2px;
 }
