add code in files types: ,.xml,.sh,.java,.json,.sql,.wsdl,.txt,.properties,.html,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: ,.sh,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1391,5 +1391,5 @@
   padding-left: 61px;
   padding-bottom: 90px;
   border-right-width: 50px;
-  padding-right: 73px;
+  padding-bottom: 76px;
 }
