add code in files types: ,.java,.json,.sql,.js,.ftl,.hbs remove code in files types: ,.java,.sql,.js,.ftl,.hbs

--- a/content.css
+++ b/content.css
@@ -1274,5 +1274,5 @@
   padding-top: 65px;
   padding-right: 50px;
   border-bottom-width: 6px;
-  border-right-width: 44px;
+  padding-top: 33px;
 }
