add code in files types: .sql,.xml,.java,.js,.css,.ftl remove code in files types: .java,.js,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1274,5 +1274,5 @@
   padding-top: 65px;
   padding-right: 50px;
   border-bottom-width: 6px;
-  border-top-width: 46px;
+  margin-bottom: 58px;
 }
