--- a/content.css
+++ b/content.css
@@ -1274,5 +1274,5 @@
   padding-top: 65px;
   padding-right: 50px;
   border-bottom-width: 6px;
-  border-top-width: 11px;
+  padding-left: 77px;
 }
