add code in files types: .hbs,.js,.scss,.css,.ftl remove code in files types: .hbs,.js,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1391,5 +1391,5 @@
   padding-left: 61px;
   padding-bottom: 90px;
   border-right-width: 50px;
-  margin-right: 66px;
+  border-top-width: 39px;
 }
