--- a/content.scss
+++ b/content.scss
@@ -1391,5 +1391,5 @@
   padding-left: 61px;
   padding-bottom: 90px;
   border-right-width: 50px;
-  border-right-width: 94px;
+  padding-top: 17px;
 }
