--- a/content.scss
+++ b/content.scss
@@ -1392,5 +1392,5 @@
   padding-bottom: 90px;
   border-right-width: 50px;
   padding-top: 17px;
-  margin-bottom: 38px;
+  padding-bottom: 45px;
 }
