--- a/content.scss
+++ b/content.scss
@@ -1392,5 +1392,5 @@
   padding-bottom: 90px;
   border-right-width: 50px;
   padding-top: 17px;
-  border-right-width: 5px;
+  padding-right: 13px;
 }
