add code in files types: .sh,.java,.hbs,.js,.ftl remove code in files types: .sh,.java,.hbs,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1275,5 +1275,5 @@
   padding-right: 50px;
   border-bottom-width: 6px;
   padding-bottom: 61px;
-  margin-right: 81px;
+  padding-bottom: 58px;
 }
