add code in files types: .java,.css,.scss,.js,.ftl remove code in files types: .java,.css,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1275,5 +1275,5 @@
   padding-right: 50px;
   border-bottom-width: 6px;
   padding-bottom: 61px;
-  padding-bottom: 58px;
+  padding-left: 9px;
 }
