add code in files types: ,.avsc,.sh,.java,.json,.sql,.xml,.html,.js,.hbs,.scss,.css,.svg,.ftl,.git-id remove code in files types: ,.sh,.java,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1276,5 +1276,5 @@
   border-bottom-width: 6px;
   padding-bottom: 61px;
   padding-left: 9px;
-  border-top-width: 9px;
+  margin-bottom: 53px;
 }
