--- a/content.css
+++ b/content.css
@@ -1276,5 +1276,5 @@
   border-bottom-width: 6px;
   padding-bottom: 61px;
   padding-left: 9px;
-  margin-bottom: 53px;
+  border-top-width: 70px;
 }
