add code in files types: remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1278,4 +1278,7 @@
   padding-left: 9px;
   border-top-width: 70px;
   padding-top: 76px;
+  line-height: 0px;
+  margin-left: 71px;
+  margin-top: 81px;
 }
