--- a/content.scss
+++ b/content.scss
@@ -1395,5 +1395,7 @@
   margin-top: 75px;
   margin-left: 0px;
   border-bottom-width: 13px;
-  border-top-width: 27px;
+  padding-right: 58px;
+  border-top-width: 58px;
+  padding-top: 36px;
 }
