add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1280,5 +1280,6 @@
   padding-top: 76px;
   line-height: 0px;
   margin-left: 71px;
-  margin-top: 81px;
+  border-top-width: 36px;
+  margin-right: 83px;
 }
