--- a/content.scss
+++ b/content.scss
@@ -1397,5 +1397,6 @@
   border-bottom-width: 13px;
   padding-right: 58px;
   border-top-width: 58px;
-  padding-top: 36px;
+  border-right-width: 26px;
+  margin-left: 80px;
 }
