add code in files types: .java,.css,.js,.ftl remove code in files types: .java,.css,.scss,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1283,5 +1283,5 @@
   border-top-width: 36px;
   margin-right: 83px;
   border-right-width: 0px;
-  border-top-width: 83px;
+  margin-top: 7px;
 }
