--- a/content.css
+++ b/content.css
@@ -1283,5 +1283,5 @@
   border-top-width: 36px;
   margin-right: 83px;
   border-right-width: 0px;
-  border-right-width: 6px;
+  border-top-width: 60px;
 }
