--- a/content.css
+++ b/content.css
@@ -1284,5 +1284,5 @@
   margin-right: 83px;
   border-right-width: 0px;
   border-bottom-width: 71px;
-  margin-bottom: 9px;
+  border-bottom-width: 54px;
 }
