--- a/content.css
+++ b/content.css
@@ -1285,5 +1285,5 @@
   border-right-width: 0px;
   border-bottom-width: 71px;
   border-bottom-width: 54px;
-  border-top-width: 56px;
+  margin-right: 33px;
 }
