add code in files types: ,.sh,.sql,.java,.hbs,.js,.scss,.css,.ftl remove code in files types: ,.sh,.java,.hbs,.js,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1285,5 +1285,5 @@
   border-right-width: 0px;
   border-bottom-width: 71px;
   border-bottom-width: 54px;
-  margin-right: 33px;
+  border-left-width: 54px;
 }
