add code in files types: ,.avsc,.sh,.sql,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.sh,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1286,5 +1286,5 @@
   border-bottom-width: 71px;
   border-bottom-width: 54px;
   border-left-width: 54px;
-  padding-right: 16px;
+  font-size: 60px;
 }
