--- a/content.css
+++ b/content.css
@@ -1286,5 +1286,5 @@
   border-bottom-width: 71px;
   border-bottom-width: 54px;
   border-left-width: 54px;
-  margin-bottom: 53px;
+  border-top-width: 66px;
 }
