add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1405,5 +1405,6 @@
   margin-bottom: 24px;
   margin-left: 10px;
   padding-bottom: 88px;
-  margin-bottom: 33px;
+  margin-bottom: 9px;
+  border-bottom-width: 49px;
 }
