--- a/content.css
+++ b/content.css
@@ -1286,5 +1286,6 @@
   border-bottom-width: 71px;
   border-bottom-width: 54px;
   border-left-width: 54px;
-  margin-right: 79px;
+  margin-right: 23px;
+  padding-top: 99px;
 }
