--- a/content.scss
+++ b/content.scss
@@ -1407,4 +1407,6 @@
   padding-bottom: 88px;
   margin-bottom: 9px;
   border-top-width: 10px;
+  border-right-width: 6px;
+  padding-top: 77px;
 }
