--- a/content.css
+++ b/content.css
@@ -1287,5 +1287,5 @@
   border-bottom-width: 54px;
   border-left-width: 54px;
   margin-right: 23px;
-  padding-right: 48px;
+  font-size: 36px;
 }
