add code in files types: remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1287,5 +1287,5 @@
   border-bottom-width: 54px;
   border-left-width: 54px;
   margin-right: 23px;
-  padding-left: 12px;
+  border-bottom-width: 13px;
 }
