--- a/content.css
+++ b/content.css
@@ -1288,5 +1288,5 @@
   border-left-width: 54px;
   margin-right: 23px;
   border-bottom-width: 13px;
-  margin-left: 57px;
+  border-left-width: 63px;
 }
