add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1289,4 +1289,9 @@
   margin-right: 23px;
   border-bottom-width: 13px;
   border-left-width: 63px;
+  margin-bottom: 32px;
+  border-left-width: 71px;
+  line-height: 18px;
+  line-height: 50px;
+  margin-left: 45px;
 }
