add code in files types: .hbs,.scss,.css,.js remove code in files types: .hbs,.css,.scss,.js

--- a/content.css
+++ b/content.css
@@ -1296,5 +1296,5 @@
   margin-left: 45px;
   border-bottom-width: 93px;
   padding-bottom: 62px;
-  padding-right: 30px;
+  border-right-width: 16px;
 }
