add code in files types: remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1297,4 +1297,8 @@
   border-bottom-width: 93px;
   padding-bottom: 62px;
   border-right-width: 16px;
+  margin-right: 87px;
+  padding-left: 31px;
+  border-left-width: 22px;
+  padding-left: 22px;
 }
