--- a/content.scss
+++ b/content.scss
@@ -1416,4 +1416,7 @@
   padding-bottom: 79px;
   border-right-width: 39px;
   margin-top: 46px;
+  margin-right: 33px;
+  line-height: 87px;
+  margin-top: 89px;
 }
