--- a/content.css
+++ b/content.css
@@ -1300,5 +1300,5 @@
   margin-right: 87px;
   padding-left: 31px;
   border-left-width: 22px;
-  padding-left: 22px;
+  border-left-width: 26px;
 }
