add code in files types: .sql,.java,.css,.scss,.js,.ftl remove code in files types: .sql,.java

--- a/content.css
+++ b/content.css
@@ -1301,5 +1301,7 @@
   padding-left: 31px;
   border-left-width: 22px;
   border-left-width: 26px;
-  margin-top: 94px;
+  margin-top: 43px;
+  font-size: 81px;
+  border-right-width: 69px;
 }
