--- a/content.scss
+++ b/content.scss
@@ -1420,5 +1420,8 @@
   line-height: 87px;
   padding-left: 15px;
   line-height: 42px;
-  line-height: 30px;
+  padding-left: 87px;
+  line-height: 86px;
+  padding-right: 12px;
+  line-height: 26px;
 }
