add code in files types: .ftl remove code in files types: .ftl

--- a/content.css
+++ b/content.css
@@ -1304,5 +1304,9 @@
   margin-top: 43px;
   font-size: 81px;
   font-size: 34px;
-  font-size: 34px;
+  margin-left: 90px;
+  font-size: 75px;
+  border-right-width: 43px;
+  margin-right: 27px;
+  border-bottom-width: 28px;
 }
