--- a/content.scss
+++ b/content.scss
@@ -1426,4 +1426,6 @@
   line-height: 26px;
   border-right-width: 43px;
   border-top-width: 67px;
+  border-right-width: 59px;
+  padding-right: 83px;
 }
