--- a/content.scss
+++ b/content.scss
@@ -1427,5 +1427,5 @@
   border-right-width: 43px;
   border-top-width: 67px;
   border-right-width: 59px;
-  padding-left: 99px;
+  font-size: 22px;
 }
