add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1310,4 +1310,7 @@
   margin-right: 27px;
   border-bottom-width: 28px;
   border-bottom-width: 75px;
+  margin-bottom: 67px;
+  padding-left: 57px;
+  margin-right: 96px;
 }
