--- a/content.scss
+++ b/content.scss
@@ -1427,5 +1427,7 @@
   border-right-width: 43px;
   border-top-width: 67px;
   border-right-width: 59px;
-  font-size: 22px;
+  border-left-width: 11px;
+  border-top-width: 60px;
+  border-bottom-width: 52px;
 }
