add code in files types: ,.sh,.json,.java,.sql,.html,.js,.hbs,.scss,.css,.svg,.ftl,.xml remove code in files types: ,.json,.java,.sql,.sh,.html,.js,.hbs,.scss,.ftl,.xml

--- a/content.scss
+++ b/content.scss
@@ -1429,5 +1429,5 @@
   border-right-width: 59px;
   border-left-width: 11px;
   border-top-width: 60px;
-  border-bottom-width: 52px;
+  border-left-width: 56px;
 }
