--- a/content.scss
+++ b/content.scss
@@ -1429,5 +1429,5 @@
   border-right-width: 59px;
   border-left-width: 11px;
   border-top-width: 60px;
-  border-left-width: 56px;
+  font-size: 50px;
 }
