add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1315,4 +1315,9 @@
   margin-right: 96px;
   padding-right: 96px;
   margin-left: 5px;
+  margin-right: 60px;
+  padding-left: 68px;
+  padding-left: 47px;
+  margin-top: 78px;
+  font-size: 48px;
 }
