add code in files types: .java,.ftl remove code in files types: .java,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1431,5 +1431,6 @@
   border-top-width: 60px;
   font-size: 50px;
   margin-bottom: 81px;
-  padding-left: 89px;
+  border-right-width: 20px;
+  border-left-width: 15px;
 }
