add code in files types: ,.sql,.java,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: ,.java,.js,.hbs,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1432,5 +1432,5 @@
   font-size: 50px;
   margin-bottom: 81px;
   border-right-width: 20px;
-  border-top-width: 21px;
+  border-left-width: 99px;
 }
