--- a/content.scss
+++ b/content.scss
@@ -1432,5 +1432,5 @@
   font-size: 50px;
   margin-bottom: 81px;
   border-right-width: 20px;
-  border-left-width: 99px;
+  border-top-width: 85px;
 }
