add code in files types: ,.java,.sql,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.java,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1322,5 +1322,5 @@
   padding-bottom: 4px;
   margin-bottom: 53px;
   margin-right: 85px;
-  border-bottom-width: 69px;
+  border-top-width: 84px;
 }
