add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1324,4 +1324,6 @@
   margin-right: 85px;
   border-top-width: 84px;
   margin-bottom: 33px;
+  padding-left: 78px;
+  border-left-width: 75px;
 }
