add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1323,6 +1323,5 @@
   margin-bottom: 53px;
   margin-right: 85px;
   border-top-width: 84px;
-  margin-bottom: 33px;
-  margin-top: 20px;
+  padding-bottom: 40px;
 }
