add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1323,5 +1323,6 @@
   margin-bottom: 53px;
   margin-right: 85px;
   border-top-width: 84px;
-  padding-bottom: 40px;
+  font-size: 2px;
+  margin-left: 44px;
 }
