--- a/content.scss
+++ b/content.scss
@@ -1433,6 +1433,7 @@
   margin-bottom: 81px;
   border-right-width: 20px;
   padding-left: 84px;
-  padding-bottom: 43px;
-  line-height: 57px;
+  padding-right: 17px;
+  line-height: 79px;
+  border-bottom-width: 86px;
 }
