add code in files types: .hbs,.scss remove code in files types: .hbs,.scss

--- a/content.scss
+++ b/content.scss
@@ -1435,5 +1435,5 @@
   padding-left: 84px;
   padding-right: 17px;
   line-height: 79px;
-  border-bottom-width: 86px;
+  border-left-width: 57px;
 }
