add code in files types: .js remove code in files types: .js

--- a/content.scss
+++ b/content.scss
@@ -1436,5 +1436,6 @@
   padding-right: 17px;
   line-height: 79px;
   border-left-width: 57px;
-  margin-left: 22px;
+  margin-right: 32px;
+  margin-top: 88px;
 }
