add code in files types: .java,.ftl remove code in files types: .ftl

--- a/content.css
+++ b/content.css
@@ -1327,4 +1327,6 @@
   margin-left: 44px;
   padding-bottom: 60px;
   border-bottom-width: 86px;
+  padding-right: 80px;
+  padding-right: 69px;
 }
