add code in files types: .java,.js,.hbs,.scss,.css,.ftl remove code in files types: .py,.java,.hbs,.js,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1328,5 +1328,5 @@
   padding-bottom: 60px;
   border-bottom-width: 86px;
   padding-right: 80px;
-  font-size: 71px;
+  border-right-width: 85px;
 }
