--- a/content.css
+++ b/content.css
@@ -1328,5 +1328,5 @@
   padding-bottom: 60px;
   border-bottom-width: 86px;
   padding-right: 80px;
-  border-right-width: 85px;
+  line-height: 69px;
 }
