--- a/content.css
+++ b/content.css
@@ -1328,5 +1328,5 @@
   padding-bottom: 60px;
   border-bottom-width: 86px;
   padding-right: 80px;
-  margin-left: 87px;
+  padding-bottom: 13px;
 }
