--- a/content.scss
+++ b/content.scss
@@ -1440,5 +1440,7 @@
   border-top-width: 15px;
   line-height: 3px;
   line-height: 6px;
-  padding-bottom: 10px;
+  margin-left: 92px;
+  padding-left: 78px;
+  margin-top: 9px;
 }
