--- a/content.scss
+++ b/content.scss
@@ -1443,5 +1443,8 @@
   margin-left: 92px;
   padding-left: 78px;
   margin-left: 17px;
-  padding-top: 4px;
+  margin-bottom: 79px;
+  border-right-width: 74px;
+  font-size: 52px;
+  font-size: 74px;
 }
