add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1448,5 +1448,7 @@
   font-size: 52px;
   font-size: 74px;
   padding-top: 85px;
-  border-top-width: 74px;
+  padding-left: 91px;
+  padding-top: 46px;
+  padding-top: 54px;
 }
