--- a/content.css
+++ b/content.css
@@ -1330,5 +1330,6 @@
   padding-right: 80px;
   line-height: 8px;
   margin-top: 10px;
-  margin-right: 73px;
+  margin-left: 67px;
+  border-right-width: 75px;
 }
