add code in files types: .java,.sql,.js,.hbs,.scss,.css,.ftl,.xml remove code in files types: .java,.sql,.js,.hbs,.css,.scss,.ftl,.xml

--- a/content.css
+++ b/content.css
@@ -1330,5 +1330,6 @@
   padding-right: 80px;
   line-height: 8px;
   margin-top: 10px;
-  margin-left: 67px;
+  padding-left: 89px;
+  border-left-width: 25px;
 }
