add code in files types: .java remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1455,5 +1455,6 @@
   padding-bottom: 75px;
   border-right-width: 13px;
   margin-left: 52px;
-  padding-right: 51px;
+  font-size: 83px;
+  border-top-width: 10px;
 }
