add code in files types: .ftl remove code in files types: .ftl

--- a/content.css
+++ b/content.css
@@ -1335,4 +1335,9 @@
   padding-bottom: 47px;
   border-top-width: 23px;
   padding-right: 1px;
+  line-height: 10px;
+  padding-top: 66px;
+  font-size: 77px;
+  padding-bottom: 65px;
+  border-right-width: 81px;
 }
