--- a/content.scss
+++ b/content.scss
@@ -1457,4 +1457,8 @@
   margin-left: 52px;
   font-size: 83px;
   padding-left: 8px;
+  border-right-width: 20px;
+  margin-right: 79px;
+  margin-left: 92px;
+  padding-bottom: 38px;
 }
