add code in files types: .java remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1461,5 +1461,8 @@
   margin-right: 79px;
   margin-left: 92px;
   padding-bottom: 38px;
-  font-size: 92px;
+  border-left-width: 14px;
+  border-left-width: 6px;
+  margin-top: 91px;
+  border-right-width: 28px;
 }
