--- a/content.css
+++ b/content.css
@@ -1341,4 +1341,8 @@
   padding-bottom: 65px;
   border-right-width: 81px;
   border-bottom-width: 26px;
+  padding-right: 14px;
+  margin-bottom: 86px;
+  padding-right: 94px;
+  border-left-width: 34px;
 }
