--- a/content.scss
+++ b/content.scss
@@ -1464,5 +1464,5 @@
   border-left-width: 14px;
   border-left-width: 6px;
   margin-top: 91px;
-  border-right-width: 28px;
+  line-height: 11px;
 }
