add code in files types: .java,.js,.hbs,.css,.scss,.ftl remove code in files types: .java,.hbs,.js,.css,.scss,.ftl

--- a/content.css
+++ b/content.css
@@ -1344,5 +1344,5 @@
   padding-right: 14px;
   margin-bottom: 86px;
   padding-right: 94px;
-  margin-bottom: 22px;
+  border-bottom-width: 94px;
 }
