add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1345,4 +1345,8 @@
   margin-bottom: 86px;
   padding-right: 94px;
   font-size: 2px;
+  padding-left: 59px;
+  margin-top: 26px;
+  padding-left: 61px;
+  line-height: 80px;
 }
