--- a/content.scss
+++ b/content.scss
@@ -1464,5 +1464,10 @@
   border-left-width: 14px;
   border-left-width: 6px;
   margin-top: 91px;
-  padding-left: 27px;
+  margin-right: 23px;
+  margin-left: 51px;
+  padding-left: 44px;
+  margin-right: 97px;
+  margin-top: 32px;
+  border-left-width: 77px;
 }
