--- a/content.css
+++ b/content.css
@@ -1346,7 +1346,5 @@
   padding-right: 94px;
   font-size: 2px;
   padding-left: 59px;
-  margin-top: 26px;
-  padding-left: 61px;
-  line-height: 99px;
+  border-right-width: 0px;
 }
