--- a/content.scss
+++ b/content.scss
@@ -1469,5 +1469,7 @@
   padding-left: 44px;
   margin-right: 97px;
   margin-top: 32px;
-  margin-left: 77px;
+  padding-right: 34px;
+  padding-bottom: 26px;
+  font-size: 86px;
 }
