add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1472,5 +1472,6 @@
   padding-right: 34px;
   padding-bottom: 26px;
   border-right-width: 85px;
-  border-bottom-width: 19px;
+  border-top-width: 58px;
+  border-right-width: 43px;
 }
