add code in files types: ,.avsc,.py,.sh,.java,.sql,.xml,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.avsc,.py,.sh,.java,.sql,.xml,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1473,5 +1473,5 @@
   padding-bottom: 26px;
   border-right-width: 85px;
   border-top-width: 58px;
-  border-left-width: 63px;
+  margin-left: 50px;
 }
