--- a/content.scss
+++ b/content.scss
@@ -1473,5 +1473,5 @@
   padding-bottom: 26px;
   border-right-width: 85px;
   border-top-width: 58px;
-  margin-left: 50px;
+  padding-top: 59px;
 }
