add code in files types: ,.avsc,.py,.java,.sql,.xml,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.avsc,.py,.java,.sql,.xml,.html,.js,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1341,5 +1341,5 @@
   padding-bottom: 65px;
   border-right-width: 81px;
   border-bottom-width: 26px;
-  padding-right: 14px;
+  padding-bottom: 77px;
 }
