--- a/content.scss
+++ b/content.scss
@@ -1462,5 +1462,6 @@
   margin-left: 92px;
   padding-bottom: 38px;
   border-left-width: 14px;
-  line-height: 40px;
+  margin-left: 90px;
+  padding-top: 9px;
 }
