add code in files types: .hbs,.js,.scss,.ftl remove code in files types: .hbs,.js,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1463,5 +1463,5 @@
   padding-bottom: 38px;
   border-left-width: 14px;
   margin-left: 90px;
-  padding-top: 9px;
+  border-bottom-width: 77px;
 }
