--- a/content.scss
+++ b/content.scss
@@ -1463,5 +1463,5 @@
   padding-bottom: 38px;
   border-left-width: 14px;
   margin-left: 90px;
-  border-bottom-width: 77px;
+  line-height: 39px;
 }
