add code in files types: .css,.scss remove code in files types: .css,.scss

--- a/content.scss
+++ b/content.scss
@@ -1463,5 +1463,5 @@
   padding-bottom: 38px;
   border-left-width: 14px;
   margin-left: 90px;
-  line-height: 39px;
+  border-right-width: 71px;
 }
