--- a/content.scss
+++ b/content.scss
@@ -1463,5 +1463,5 @@
   padding-bottom: 38px;
   border-left-width: 14px;
   margin-left: 90px;
-  padding-left: 67px;
+  border-bottom-width: 43px;
 }
