--- a/content.css
+++ b/content.css
@@ -1337,5 +1337,8 @@
   padding-right: 1px;
   line-height: 10px;
   padding-top: 66px;
-  margin-left: 48px;
+  border-right-width: 52px;
+  padding-left: 52px;
+  margin-right: 83px;
+  margin-left: 70px;
 }
