--- a/content.scss
+++ b/content.scss
@@ -1463,5 +1463,8 @@
   padding-bottom: 38px;
   border-left-width: 14px;
   margin-left: 90px;
-  border-bottom-width: 43px;
+  padding-bottom: 44px;
+  padding-top: 34px;
+  margin-left: 28px;
+  border-left-width: 85px;
 }
