add code in files types: .py,.sql,.git-id remove code in files types: .py,.sql,.git-id

--- a/content.scss
+++ b/content.scss
@@ -1466,5 +1466,6 @@
   padding-bottom: 44px;
   padding-top: 34px;
   margin-left: 28px;
-  padding-top: 26px;
+  padding-right: 99px;
+  border-right-width: 51px;
 }
