--- a/content.css
+++ b/content.css
@@ -1342,5 +1342,5 @@
   margin-right: 83px;
   padding-right: 4px;
   margin-left: 72px;
-  border-bottom-width: 7px;
+  border-left-width: 86px;
 }
