--- a/content.scss
+++ b/content.scss
@@ -1467,5 +1467,6 @@
   padding-top: 34px;
   margin-left: 28px;
   padding-right: 99px;
-  padding-bottom: 30px;
+  line-height: 41px;
+  margin-right: 48px;
 }
