add code in files types: .css,.scss,.ftl remove code in files types: .css,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1470,5 +1470,6 @@
   line-height: 41px;
   margin-right: 48px;
   padding-right: 70px;
-  border-left-width: 32px;
+  margin-bottom: 95px;
+  padding-top: 47px;
 }
