add code in files types: ,.java,.sql,.html,.hbs,.js,.scss,.css,.ftl remove code in files types: ,.java,.sql,.html,.hbs,.js,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1346,5 +1346,5 @@
   border-bottom-width: 18px;
   padding-left: 44px;
   padding-left: 77px;
-  border-bottom-width: 62px;
+  border-right-width: 53px;
 }
