--- a/content.css
+++ b/content.css
@@ -1346,5 +1346,5 @@
   border-bottom-width: 18px;
   padding-left: 44px;
   padding-left: 77px;
-  border-right-width: 53px;
+  margin-right: 16px;
 }
