--- a/content.scss
+++ b/content.scss
@@ -1475,5 +1475,5 @@
   padding-left: 85px;
   border-top-width: 50px;
   margin-right: 44px;
-  border-right-width: 41px;
+  padding-right: 12px;
 }
