add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1475,5 +1475,6 @@
   padding-left: 85px;
   border-top-width: 50px;
   margin-right: 44px;
-  padding-right: 12px;
+  padding-left: 81px;
+  padding-right: 34px;
 }
