add code in files types: .sql remove code in files types: .sql

--- a/content.scss
+++ b/content.scss
@@ -1479,4 +1479,6 @@
   padding-right: 34px;
   border-bottom-width: 49px;
   border-bottom-width: 66px;
+  border-right-width: 43px;
+  font-size: 8px;
 }
