add code in files types: .css,.scss,.js,.ftl remove code in files types: .js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1482,4 +1482,6 @@
   border-right-width: 43px;
   font-size: 8px;
   padding-bottom: 3px;
+  border-right-width: 41px;
+  padding-right: 36px;
 }
