add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1352,4 +1352,9 @@
   border-top-width: 42px;
   font-size: 64px;
   border-left-width: 57px;
+  border-top-width: 93px;
+  border-bottom-width: 14px;
+  padding-top: 31px;
+  border-left-width: 97px;
+  border-top-width: 60px;
 }
