--- a/content.scss
+++ b/content.scss
@@ -1484,4 +1484,10 @@
   padding-bottom: 3px;
   border-right-width: 41px;
   padding-right: 36px;
+  padding-left: 71px;
+  margin-bottom: 34px;
+  margin-left: 19px;
+  padding-right: 70px;
+  padding-left: 47px;
+  padding-bottom: 32px;
 }
