add code in files types: ,.avsc,.py,.sh,.java,.sql,.git-id,.xml,.properties,.json,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.py,.sh,.java,.sql,.git-id,.xml,.properties,.html,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.css
+++ b/content.css
@@ -1356,5 +1356,5 @@
   border-bottom-width: 14px;
   padding-top: 31px;
   border-left-width: 97px;
-  border-top-width: 60px;
+  border-right-width: 30px;
 }
