add code in files types: .py remove code in files types: .py

--- a/content.css
+++ b/content.css
@@ -1357,4 +1357,6 @@
   padding-top: 31px;
   border-left-width: 97px;
   border-right-width: 30px;
+  margin-right: 93px;
+  border-top-width: 23px;
 }
