--- a/content.scss
+++ b/content.scss
@@ -1491,4 +1491,6 @@
   padding-left: 47px;
   margin-bottom: 51px;
   padding-right: 41px;
+  border-bottom-width: 11px;
+  border-top-width: 76px;
 }
