add code in files types: .py,.sh,.js,.sql,.java,.hbs,.scss,.css,.ftl remove code in files types: .py,.sh,.sql,.java,.js,.hbs,.css,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1494,5 +1494,5 @@
   border-bottom-width: 11px;
   border-top-width: 76px;
   margin-right: 10px;
-  padding-right: 53px;
+  margin-left: 32px;
 }
