--- a/content.scss
+++ b/content.scss
@@ -1494,5 +1494,5 @@
   border-bottom-width: 11px;
   border-top-width: 76px;
   margin-right: 10px;
-  border-bottom-width: 95px;
+  padding-top: 53px;
 }
