add code in files types: .java remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1360,5 +1360,6 @@
   margin-right: 93px;
   border-top-width: 23px;
   padding-top: 46px;
-  margin-top: 85px;
+  margin-right: 76px;
+  padding-left: 20px;
 }
