add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1361,5 +1361,6 @@
   border-top-width: 23px;
   padding-top: 46px;
   margin-right: 76px;
-  border-right-width: 55px;
+  margin-right: 70px;
+  padding-right: 76px;
 }
