add code in files types: .py remove code in files types: .py

--- a/content.scss
+++ b/content.scss
@@ -1497,6 +1497,5 @@
   margin-top: 93px;
   line-height: 55px;
   margin-right: 90px;
-  font-size: 29px;
-  padding-top: 79px;
+  padding-left: 97px;
 }
