add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1499,4 +1499,8 @@
   margin-right: 90px;
   border-left-width: 13px;
   margin-right: 61px;
+  border-bottom-width: 76px;
+  line-height: 10px;
+  line-height: 19px;
+  padding-bottom: 71px;
 }
