add code in files types: .sh remove code in files types: .sh

--- a/content.css
+++ b/content.css
@@ -1369,4 +1369,6 @@
   border-right-width: 89px;
   margin-bottom: 20px;
   margin-right: 32px;
+  border-right-width: 10px;
+  border-right-width: 18px;
 }
