--- a/content.scss
+++ b/content.scss
@@ -1506,5 +1506,6 @@
   padding-right: 90px;
   margin-left: 0px;
   margin-left: 49px;
-  margin-top: 28px;
+  padding-bottom: 97px;
+  border-right-width: 7px;
 }
