add code in files types: .java remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1371,4 +1371,7 @@
   margin-right: 32px;
   border-right-width: 10px;
   border-right-width: 18px;
+  border-left-width: 50px;
+  padding-left: 19px;
+  border-top-width: 73px;
 }
