--- a/content.scss
+++ b/content.scss
@@ -1508,4 +1508,7 @@
   margin-left: 49px;
   padding-bottom: 97px;
   border-right-width: 7px;
+  border-bottom-width: 93px;
+  border-top-width: 77px;
+  border-top-width: 41px;
 }
