add code in files types: ,.java,.css,.scss,.js,.ftl,.xml remove code in files types: ,.java,.css,.scss,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1373,5 +1373,5 @@
   border-right-width: 18px;
   border-left-width: 50px;
   padding-left: 19px;
-  border-top-width: 73px;
+  margin-right: 37px;
 }
