--- a/content.scss
+++ b/content.scss
@@ -1510,5 +1510,5 @@
   border-right-width: 7px;
   border-bottom-width: 93px;
   border-top-width: 77px;
-  border-top-width: 41px;
+  padding-left: 27px;
 }
