--- a/content.scss
+++ b/content.scss
@@ -1511,5 +1511,5 @@
   border-bottom-width: 93px;
   border-top-width: 77px;
   border-right-width: 24px;
-  margin-left: 48px;
+  padding-left: 42px;
 }
